tests/ui/type/pattern_types/derives.stderr
error[E0369]: binary operation `==` cannot be applied to type `(i32) is 0..=999999999`
  --> $DIR/derives.rs:10:20
   |
LL | #[derive(Clone, Copy, PartialEq)]
   |                       --------- in this derive macro expansion
LL | #[repr(transparent)]
LL | struct Nanoseconds(NanoI32);
   |                    ^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
